# rekit

./: .dockerignore  .gitignore  README.md  ROADMAP.md  SERVER-CONTRACT.md  SKILL-CONTRACT.md  registry.json  requirements.json
.github/workflows/: ci.yml  native-lift-image.yml
containers/native-lift/: Dockerfile  README.md  entrypoint.sh
docs/: PLATFORMS.md  POSITIONING.md
scripts/: rekit.py  rekit_mcp.py  skillpack.py
skills/asm-assemble/: SKILL.md  skill.json
skills/bin-triage/: SKILL.md
skills/binwalk-carve/: SKILL.md  skill.json
skills/cc-build/: SKILL.md  skill.json
skills/dex-dump/: SKILL.md
skills/dex-dump/scripts/dex-dumper/: Cargo.toml  README.md
skills/dex-dump/scripts/dex-dumper/src/: dex.rs  linux.rs  main.rs  maps.rs  sha256.rs
skills/dotnet-analyze/: SKILL.md  skill.json
skills/dotnet-decompile/: SKILL.md
skills/elf-analyze/: SKILL.md  skill.json
skills/emulate-code/: SKILL.md  skill.json
skills/emulation-session/: SKILL.md
skills/exec-observe/: SKILL.md  skill.json
skills/frida-android-instrument/: SKILL.md
skills/frida-api-trace/: SKILL.md
skills/frida-trace/: SKILL.md  skill.json
skills/ghidra-decompile/: SKILL.md  skill.json
skills/gitops/: SKILL.md
skills/hex-view/: SKILL.md  skill.json
skills/intellidiff/: SKILL.md
skills/ioc-extract/: SKILL.md  skill.json
skills/ios-dump/: SKILL.md
skills/pe-unmap/: SKILL.md
tests/: test_added_skills.py  test_cli.py  test_emulation_session.py  test_frida_android_instrument.py  test_intellidiff.py  test_joern_slice.py  test_native_disassemble.py  test_native_lift.py
(+145 files in other folders)
